--- a/info.yaml
+++ b/info.yaml
@@ -1,10 +1,10 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     424253113843348481       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        "Poly Workshop AND GATE"      # Project title
+  wokwi_id:     424253113843348481      # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "JUST LED's"      # Project title
   author:       "MED TOT"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "Using AND GATE to turn on an LED"      # One line description of what your project does
+  description:  "Using AND GATE to turn on an LED's"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -15,24 +15,24 @@ project:
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: "A"
+  ui[0]: "B1"
   ui[1]: ""
-  ui[2]: "B"
+  ui[2]: "B2"
   ui[3]: ""
   ui[4]: ""
-  ui[5]: ""
+  ui[5]: "R1"
   ui[6]: ""
-  ui[7]: ""
+  ui[7]: "R2"
 
   # Outputs
   uo[0]: ""
-  uo[1]: "A AND B"
-  uo[2]: ""
-  uo[3]: ""
+  uo[1]: "White"
+  uo[2]: "Blue"
+  uo[3]: "Purple"
   uo[4]: ""
   uo[5]: ""
   uo[6]: ""
-  uo[7]: ""
+  uo[7]: "Red"
 
   # Bidirectional pins
   uio[0]: ""
